# migbis

./: README.md
bioimagesuite30_src/: BISConfig.cmake  BioImageSuiteMacros.cmake  BioImageSuite_Description.txt  BioImageSuite_License.txt  BioImageSuite_ShortLicense.txt  CMakeLists.txt  CMakeOptions.cmake  CPackOptions.cmake  CTestCustom.cmake.in  CompilingBioImageSuite.html  UseBIS.cmake  bioimagesuite_settings.h  bioimagesuitepostinstall.cmake  bis_console  bisalgorithmscriptlist.txt  biscppexec  bisexec  cmake_install.cmake  cppfilelist.tcl  runscript  scriptfiles.txt  setpaths.csh  setpaths.sh  setpaths_console.sh  start_bioimagesuite  tclfilelist.tcl
bioimagesuite30_src/Common/: CMakeLists.txt  cmake_install.cmake  nifti1_io.c  vtkTemplateAliasMacro.h  vtkafBVImageReader.cpp  vtkafBVImageReader.h  vtkafBVImageWriter.cpp  vtkafBVImageWriter.h  vtkbisCylinderSource.cpp  vtkbisCylinderSource.h  vtkbisDICOMReader.cpp  vtkbisDICOMReader.h  vtkbisGDCMImageReader.cpp  vtkbisGDCMImageReader.h  vtkbisImageHeader.cpp  vtkbisImageHeader.h  vtkbisImageReOrient.cpp  vtkbisImageReOrient.h  vtkbisImageResample.cpp  vtkbisImageResample.h  vtkbisImageReslice.cpp  vtkbisImageReslice.h  vtkbisNIFTIExtension.cpp  vtkbisNIFTIExtension.h  vtkbisNIFTIExtensionsList.cpp  vtkbisNIFTIExtensionsList.h  vtkbisTestUtil.cpp  vtkbisTestUtil.h  vtkjoColoredSphereSource.cpp  vtkjoColoredSphereSource.h  vtkjoROCFilter.cpp  vtkjoROCFilter.h  vtkjoSphereSource.cxx  vtkjoSphereSource.h  vtkjoStatistics.cpp  vtkjoStatistics.h  vtkokImageAccumulate.cpp  vtkokImageAccumulate.h  vtkpxAbstractMatrix.cpp  vtkpxAbstractMatrix.h  (+61 more)
bioimagesuite30_src/Connectivity/: CMakeLists.txt  cmake_install.cmake  vtkbisConnectivityTCLInit.cxx  vtkbisConnectivityTCLInit.data  vtkbisConnectivityUtility.cpp  vtkbisConnectivityUtility.h  vtkbisConnectivityUtilityTcl.cxx  vtkbisCsfWmMotionCorrection.cpp  vtkbisCsfWmMotionCorrection.h  vtkbisCsfWmMotionCorrectionTcl.cxx  vtkbisDijkstraGraphGeodesicPath.cpp  vtkbisDijkstraGraphGeodesicPath.h  vtkbisDijkstraGraphGeodesicPathTcl.cxx  vtkbisDisplayROIMean.cpp  vtkbisDisplayROIMean.h  vtkbisDisplayROIMeanTcl.cxx  vtkbisImageTemporalSmoothing.cpp  vtkbisImageTemporalSmoothing.h  vtkbisImageTemporalSmoothingTcl.cxx  vtkbisImageTimeSeriesNormalize.cpp  vtkbisImageTimeSeriesNormalize.h  vtkbisImageTimeSeriesNormalizeTcl.cxx  vtkbisIntrinsicConnMap.cpp  vtkbisIntrinsicConnMap.h  vtkbisIntrinsicConnMapTcl.cxx  vtkbisIpsilateralConnMap.cpp  vtkbisIpsilateralConnMap.h  vtkbisIpsilateralConnMapTcl.cxx  vtkbisMedianTemporalSmoothing.cpp  vtkbisMedianTemporalSmoothing.h  vtkbisMedianTemporalSmoothingTcl.cxx  vtkbisROICorrelation.cpp  vtkbisROICorrelation.h  vtkbisROICorrelationTcl.cxx  vtkbisROIMean.cpp  vtkbisROIMean.h  vtkbisROIMeanTcl.cxx  vtkbisROIMean_rt.cpp  vtkbisROIMean_rt.h  vtkbisROIMean_rtTcl.cxx  (+30 more)
bioimagesuite30_src/DemonsRegistration/: CMakeLists.txt  DeformableRegistration.cxx  OtherFunctions.cxx  OtherFunctions.h  firstExtendedDemon.h  firstExtendedSymmetricDemon.h  itkBinaryMorphologicalClosingImageFilter.h  itkBinaryMorphologicalClosingImageFilter.txx  itkjwsDemonsRegistrationFilter.h  itkjwsDemonsRegistrationFilter.txx  itkjwsDemonsRegistrationFunction.h  itkjwsDemonsRegistrationFunction.txx  itkjwsDenseFiniteDifferenceImageFilter.h  itkjwsDenseFiniteDifferenceImageFilter.txx  itkjwsMultiResolutionPDEDeformableRegistration.h  itkjwsMultiResolutionPDEDeformableRegistration.txx  itkjwsPDEDeformableRegistrationFilter.h  itkjwsPDEDeformableRegistrationFilter.txx  itkjwsPDEDeformableRegistrationFunction.h  itkjwsSymmetricForcesDemonsRegistrationFilter.h  itkjwsSymmetricForcesDemonsRegistrationFilter.txx  itkjwsSymmetricForcesDemonsRegistrationFunction.h  itkjwsSymmetricForcesDemonsRegistrationFunction.txx  jwsForRewritingPreprocess.cpp  jwsNewMain.cxx  jwsReadWriteImages.cpp  jwsReadWriteImages.h  jwsReadWriteImagesTest.cpp  jwsSymmetricNewMain.cxx  secondExtendedDemon.h  secondExtendedSymmetricDemon.h  thirdDemon.h  thirdSymmetricDemon.h  vtkjwsSymmetricDemonsRegistration.cpp  vtkjwsSymmetricDemonsRegistration.h  wook.h
bioimagesuite30_src/GUI/: CMakeLists.txt  cmake_install.cmake  pxtkanaheadercontrol.cpp  pxtkanaheadercontrol.h  pxvtkgadgets.cpp  pxvtkgadgets.h  pxvtktkdialog.cpp  pxvtktkdialog.h  vtkbisGUINIFTIHeaderEditor.cpp  vtkbisGUINIFTIHeaderEditor.h  vtkmpjX3DExporter.cpp  vtkmpjX3DExporter.h  vtkpxGUI2DImageEditor.cpp  vtkpxGUI2DImageEditor.h  vtkpxGUI2DImageViewer.cpp  vtkpxGUI2DImageViewer.h  vtkpxGUI2DSplineObjectmapViewer.cpp  vtkpxGUI2DSplineObjectmapViewer.h  vtkpxGUI4DRenderer.cpp  vtkpxGUI4DRenderer.h  vtkpxGUI4DSplineStackControl.cpp  vtkpxGUI4DSplineStackControl.h  vtkpxGUI4DTriangulatedStackControl.cpp  vtkpxGUI4DTriangulatedStackControl.h  vtkpxGUIAbstractMultisliceEditor.cpp  vtkpxGUIAbstractMultisliceEditor.h  vtkpxGUIAnalyzeHeaderEditor.cpp  vtkpxGUIAnalyzeHeaderEditor.h  vtkpxGUIBaseCurveControl.cpp  vtkpxGUIBaseCurveControl.h  vtkpxGUIBaseCurveEditor.cpp  vtkpxGUIBaseCurveEditor.h  vtkpxGUIBaseImageViewer.cpp  vtkpxGUIBaseImageViewer.h  vtkpxGUIBaseRenderer.cpp  vtkpxGUIBaseRenderer.h  vtkpxGUICallback.cpp  vtkpxGUICallback.h  vtkpxGUIColormapEditor.cpp  vtkpxGUIColormapEditor.h  (+51 more)
bioimagesuite30_src/Graphics/: CMakeLists.txt  cmake_install.cmake  vtkCropVolumeRayCastCompositeGOHelper.cxx  vtkCropVolumeRayCastCompositeGOHelper.h  vtkCropVolumeRayCastCompositeGOShadeHelper.cxx  vtkCropVolumeRayCastCompositeGOShadeHelper.h  vtkCropVolumeRayCastCompositeHelper.cxx  vtkCropVolumeRayCastCompositeHelper.h  vtkCropVolumeRayCastCompositeShadeHelper.cxx  vtkCropVolumeRayCastCompositeShadeHelper.h  vtkCropVolumeRayCastMapper.cxx  vtkCropVolumeRayCastMapper.h  vtkEllipseSource.cxx  vtkEllipseSource.h  vtkpx2DImageSlice.cpp  vtkpx2DImageSlice.h  vtkpxAddDisplacementVectorToPolyData.cpp  vtkpxAddDisplacementVectorToPolyData.h  vtkpxAppendAndLabelPolyData.cpp  vtkpxAppendAndLabelPolyData.h  vtkpxCameraInfo.cpp  vtkpxCameraInfo.h  vtkpxColorMapUtil.cpp  vtkpxColorMapUtil.h  vtkpxCurveEditUtil.cpp  vtkpxCurveEditUtil.h  vtkpxElectrodeGridSource.cpp  vtkpxElectrodeGridSource.h  (+26 more)
(+1403 files in other folders)
